[package]
name = "image-extras"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

include = ["src", "tests/reference.rs"]

[features]
default = ["pcx", "wbmp", "otb"]
pcx = []
wbmp = ["dep:wbmp"]
otb = []

[dependencies]
image = { version = "0.25.5", default-features = false }
pcx = "0.2.4"
wbmp = { version = "0.1.2", optional = true }

[dev-dependencies]
image = { version = "0.25.5", default-features = false, features = ["png"] }
walkdir = "2.5.0"

[patch.crates-io]
#image = { git = "https://github.com/fintelia/image", branch = "decoding-hooks" }
image = { git = "https://github.com/reshane/image", branch = "decoding-hooks" }
